| Summary: | ASTERISK-25598: res_pjsip: Contact status messages are printing a hash instead of the uri | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2015-11-30 18:04:54.000-0600 | Date Closed: | 2015-12-03 12:41:39.000-0600 |
| Priority: | Trivial | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | SVN 13.6.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Commit 34ad877bac16e70bf6c6ac8d881716e6b25f5b07 changed the dynamic contact identity to a hash instead of the URI but the log messages weren't updated to use the URI instead of the id. The result is messages like "Contact 1185/a55ffd3f6cd631c4c3531146df25414f has been deleted" which isn't very useful. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-11-30 18:04:55.481-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||